# zadanie

./: CNAME  Krajkowski_2G_1.docx  index.html  obs-udp-stream.rar  szpont.html  tabela_krajkowski.html  z1.html  z2.html  z3.html  z4.html  z5.html  zadania skrypt.js  zadanie5.html  zadanie_sprawdzian.txt  zadanieadresy.html
Krajkowski 2G1/: czerwone.html  index.html  niebieskie.html  zielone.html  zolte.html
Krajkowski 3G1/: zadanie1_krajkowski.html  zadanie2_krajkowski.html  zadanie4_krajkowski.html
arkusz/: KRAJ_z15.css  KRAJ_z15.html  KRAJ_z15_kod.html  KRAJ_z5_1.css  KRAJ_z5_1.html  KRAJ_z5_1_kod.html  KRAJ_z5_2.css  KRAJ_z5_2.html  KRAJ_z5_2_kod.html  KRAJ_z5_3.html  KRAJ_z5_3_kod.html  KRAJ_z5_4.html  KRAJ_z5_4_kod.html  index.html  kod_zadanie17_p1.html  kod_zadanie1_krajkowski.html  kod_zadanie_17_p2.html  kraj_z12.html  kraj_z13.css  kraj_z13.html  kraj_z13_kod.html  kraj_z6.css  kraj_z6.html  kraj_z6_kod.html  start.html  z14.html  zadanie16_kraj.html  zadanie17_p1_kraj.html  zadanie17_p2_kraj.html  zadanie1_krajkowski.html  zadanie2_krajkowski.html  zadanie3_krajkowski.html  zadanie4_krajkowski.html
arkuszjs/: Krajkowski-Zadanie38_E1.html  Krajkowski-Zadanie38_E2.html  Krajkowski-Zadanie38_E2_kod.html  Krajkowski-Zadanie38_E3.html  Krajkowski-Zadanie38_E3_kod.html  Krajkowski-Zadanie38_E4.html  Krajkowski-Zadanie38_E4_kod.html  Nacisnij.html  grafika4.avif  index.html  kod_zadanie11_kra.html  kraj_z34.html  kraj_z35.html  kraj_z35_kod.html  (+92 more)
obs-udp-stream/: CMakeLists.txt  receiver.py
obs-udp-stream/src/: plugin-main.cpp  udp-output.cpp  udp-output.h
(+62 files in other folders)
